<resources>
    <string name="app_name">PracticaPis</string>
    <string name="action_share">Share</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_archive">Archive</string>
    <!-- Strings used for fragments for navigation -->

    <string name="archive_notes">Archive || Note</string>

    <string name="action_delete">Delete</string>
    <string name="action_reminder">Reminder</string>
    <string name="buttonAdd">Add Note</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome! "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_maps">Map</string>

    <string name="favoritestar">favoriteStar</string>
    <string name="notes">Notes</string>
    <string name="sing_out">Sing Out</string>

    <!-- Login Google -->
    <string name="sign_in_google">Have a Google account?</string>
    <string name="server_client_id">277878564756-v0m4rganho3q8b6mv1qp8cs8lik48ub2.apps.googleusercontent.com</string>
    <string name="client_secret">uYQNNmsv1NxbnMXmh_ch0Rfb</string>

    <!-- DrawActivity -->
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>

    <!-- Brush sizes -->
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
</resources>