<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.practicapis.MainActivity">
    <item
        android:id="@+id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/action_share"/>
    <item
        android:id="@+id/action_favorite"
        android:icon="@android:drawable/btn_star"
        android:title="@string/action_favorite" />
    <item
        android:id="@+id/action_archive"
        android:title="@string/action_archive" />
    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_delete"
        android:title="@string/action_delete" />
    <item
        android:id="@+id/action_reminder"
        android:icon="@android:drawable/ic_popup_reminder"
        android:title="@string/action_reminder" />
</menu>